margin and spacing fixes

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,8 +1,8 @@
 
 .about-project p, .next-steps p, .using-product p {
-    text-align: left;
-    margin: 15px 100px 15px 100px;
-    line-height: 2;
+    text-align: justify;
+    margin: 0px 100px 15px 100px;
+    line-height: 1.5;
     color: white;
 }
 
@@ -18,6 +18,7 @@
     background-image: url("../assets/pexels-photo-943898.jpeg");
     background-size: cover;
     background-position: bottom;
+    border-radius: 0px;
 }
 
 .about-project a {
@@ -58,12 +59,6 @@ a:hover {
     text-decoration: underline;
 }
 
-.meet-team img {
-    width: 225px;
-    height: 225px;
-    border-radius: 50%;
-}
-
 #people-previews {
     height: auto;
     display: block;
@@ -77,44 +72,55 @@ a:hover {
     margin-top: 10px;
 }
 
+
+.history {
+  flex: 4 !important;
+}
+
 .person {
+    flex: 1 !important;
+}
+
+.person img {
     display: inline-block;
-    margin-left: 4%;
-    margin-right: 4%;
-    margin-top: 15px;
+    margin: 0px;
 }
 
 .using-product {
-    flex-direction: column !important;    /* vertical alignment of flex items */
+    flex-direction: row !important;    /* vertical alignment of flex items */
     justify-content: flex-start !important;   /* center flex items vertically */
 }
 
 .using-product h2 {
       text-align: left;
       margin: 15px 100px 15px 100px;
-      font-size: 24px;
+      font-size: 18px;
 }
 
 
 .next-steps {
-    flex: 3 !important;
+    flex: 2 !important;
     flex-direction: column !important;    /* vertical alignment of flex items */
     justify-content: flex-start !important;   /* center flex items vertically */
 }
 
 .next-steps h2 {
       text-align: left;
-      margin: 15px 100px 15px 100px;
-      font-size: 24px;
+      font-size: 18px;
+      margin: 0px 100px 5px 100px;
+      font-size: 18px;
 }
 
 .next-steps h3 {
       text-align: left;
-      margin: 15px 100px 15px 100px;
+      font-size: 18px;
+      margin: 30px 50px 5px 100px;
 }
 
 .next-steps p {
     color: #000000;
+    font-size: 14px;
+    margin: 0px 10px 0px 100px;
 }
 
 .contact-info {
@@ -138,6 +144,8 @@ a:hover {
 .contact-info a, .using-product a {
     text-decoration: none;
     color: #000000;
+    font-size: 14px;
+
 }
 
 .using-product a:hover {
@@ -150,9 +158,9 @@ a:hover {
 }
 
 .info-box {
+    flex-wrap: wrap;
     background: #F2F5E8;
     padding: 15%;
-    border-radius: 5px;
     margin-bottom: 15px;
 }
 
@@ -162,5 +170,4 @@ a:hover {
 
 .bottom {
   flex-direction: column;
-  color: pink;
 }
