--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,14 +1,13 @@
 #header {
     height: auto;
-    margin: 31px 31px 15px 31px;
-    border-radius: 5px;
+    margin: 15px 15px 15px 15px;
     background-color: white;
 }
 
 #title-area {
     float: left;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 #title-area a {
@@ -17,8 +16,9 @@
 }
 
 #title-area img {
-  height: 20%;
-  width: 20%;
+  height: 15%;
+  width: 15%;
+  float: left;
 }
 
 #title-area h1 {
@@ -27,8 +27,8 @@
 
 #nav-button-area {
     float: right;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     margin-right: 20px;
 }
 
@@ -36,10 +36,10 @@
     color: #62731D;;
     float: left;
     padding: 12px;
-    border-radius: 5px;
+    border-radius: 0px;
     text-decoration: none;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 14px;
     cursor: pointer;
 
     -o-transition:.3s;
